<resources>
    <string name="app_name">ProfileApplication</string>
    <string name="email_id">Email Id</string>
    <string name="password">Password</string>
    <string name="login">Login</string>
    <string name="login_with_google">Login With Google</string>

    <string name="email_password_required">Email and Password are required</string>

    <string name="err_email_required">Email is Required</string>
    <string name="err_invalid_email">Invalid Email</string>
    <string name="err_email_too_long">Email too long</string>
    <string name="err_password_is_required">Password is required</string>
    <string name="err_password_too_long">Password too long</string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="or">OR</string>
    <string name="new_to_logistics_register">New to Logistics? Register</string>
    <string name="don_t_worry_it_happens_please_enter_the_address_associated_with_your_account">Don\'t worry! It Happens. Please enter the address associated with your account.</string>
    <string name="submit">Submit</string>
    <string name="signup_successfully">Signup Successfully</string>
    <string name="signIn_successfully">Login Successfull</string>
</resources>